syntax = "proto3";

package api;

option go_package = "github.com/thomas-illiet/terrapi-controller/api";

service DeploymentService {
  rpc GetDeployment(RetrieveDeploymentRequest) returns (Deployment)  {}
}

message RetrieveDeploymentRequest {
  int32 id = 1;
}

message DeploymentModule {
  string name = 1;
  string address = 2;
  string path = 3;
  string username = 4;
  string password = 5;
}

message DeploymentRequest {
  enum Action {
    init = 0;
    plan = 1;
    apply = 2;
    destroy = 3;
  }

  Action action = 1;
  repeated DeploymentRequestVariable variables = 2;
}

message DeploymentRequestVariable {
  string name = 1;
  string value = 2;
  bool secret = 3;
}

message Deployment {
  DeploymentModule module = 1;
  DeploymentRequest request = 2;
}




